--- a/Logistic_regression_pima.ipynb
+++ b/Logistic_regression_pima.ipynb
@@ -503,15 +503,15 @@
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000002D69C5D2340>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002D69CCAC7F0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002D69CCDEC40>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000002D69CD0C160>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002D69CD43550>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002D69CD6E8E0>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000002D69CD6E9D0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002D69CD9AE80>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002D69CDFF6D0>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000001D12425AD60>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001D124947250>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001D1249756A0>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001D1249A1B20>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001D1249CCF70>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001D124A05340>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001D124A05430>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001D124A308E0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001D124A97130>]],\n",
        "      dtype=object)"
       ]
      },
@@ -559,7 +559,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2d69e87fd60>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1d12652f640>"
       ]
      },
      "execution_count": 8,
@@ -591,7 +591,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2d69f7c01c0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1d127452dc0>"
       ]
      },
      "execution_count": 9,
@@ -623,7 +623,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2d69f8134c0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1d1274c56a0>"
       ]
      },
      "execution_count": 10,
@@ -655,7 +655,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2d69f881100>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1d127524b80>"
       ]
      },
      "execution_count": 11,
@@ -687,7 +687,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2d69f8f9160>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1d12759b2e0>"
       ]
      },
      "execution_count": 12,
@@ -719,7 +719,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2d69f964040>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1d127600df0>"
       ]
      },
      "execution_count": 13,
@@ -997,7 +997,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2d69e833130>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1d12648e6d0>"
       ]
      },
      "execution_count": 18,
@@ -1029,7 +1029,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2d69f7b73d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1d126478fd0>"
       ]
      },
      "execution_count": 19,
@@ -1070,7 +1070,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2d69d0a6760>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1d124d50760>"
       ]
      },
      "execution_count": 21,
@@ -1237,7 +1237,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2d69d12c6d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1d124ddd910>"
       ]
      },
      "execution_count": 25,
@@ -1766,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1775,13 +1775,13 @@
        "0.7431192660550459"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accuracy_score(y_test,prediction_norm)"
+    "accuracy_score(y_test,prediction_norm)\n"
    ]
   },
   {
@@ -2423,7 +2423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -2432,7 +2432,7 @@
        "DecisionTreeClassifier(criterion='entropy', max_depth=2, random_state=1)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2444,7 +2444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -2459,6 +2459,467 @@
    "source": [
     "print(tree1.score(x_train,y_train))\n",
     "print(tree1.score(x_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Ensemble Learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import BaggingClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7885375494071146\n",
+      "0.7293577981651376\n"
+     ]
+    }
+   ],
+   "source": [
+    "bgcl=BaggingClassifier(base_estimator=tree1,n_estimators=10,random_state=1)\n",
+    "bgcl.fit(x_train,y_train)\n",
+    "print(bgcl.score(x_train,y_train))\n",
+    "print(bgcl.score(x_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9822134387351779\n",
+      "0.7247706422018348\n"
+     ]
+    }
+   ],
+   "source": [
+    "bgcl=BaggingClassifier(base_estimator=tree,n_estimators=10,random_state=1)\n",
+    "bgcl.fit(x_train,y_train)\n",
+    "print(bgcl.score(x_train,y_train))\n",
+    "print(bgcl.score(x_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7905138339920948\n",
+      "0.7339449541284404\n"
+     ]
+    }
+   ],
+   "source": [
+    "bgcl=BaggingClassifier(base_estimator=model,n_estimators=10,random_state=1)\n",
+    "bgcl.fit(x_train,y_train)\n",
+    "print(bgcl.score(x_train,y_train))\n",
+    "print(bgcl.score(x_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7885375494071146\n",
+      "0.7431192660550459\n"
+     ]
+    }
+   ],
+   "source": [
+    "bgcl=BaggingClassifier(base_estimator=model,n_estimators=4,random_state=1)\n",
+    "bgcl.fit(x_train,y_train)\n",
+    "print(bgcl.score(x_train,y_train))\n",
+    "print(bgcl.score(x_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8814229249011858\n",
+      "0.7477064220183486\n"
+     ]
+    }
+   ],
+   "source": [
+    "dtree=DecisionTreeClassifier(criterion='gini',max_depth=5, random_state=1)\n",
+    "bgcl=BaggingClassifier(n_estimators=50,base_estimator=dtree, random_state=1)\n",
+    "bgcl.fit(x_train,y_train)\n",
+    "print(bgcl.score(x_train,y_train))\n",
+    "print(bgcl.score(x_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rfcl=RandomForestClassifier(n_estimators=64,random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(n_estimators=64, random_state=1)"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rfcl.fit(x_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "0.7247706422018348\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rfcl.score(x_train,y_train))\n",
+    "print(rfcl.score(x_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8280632411067194\n",
+      "0.7293577981651376\n"
+     ]
+    }
+   ],
+   "source": [
+    "rfcl=RandomForestClassifier(n_estimators=64,random_state=1,criterion='entropy', max_depth=3)\n",
+    "rfcl.fit(x_train,y_train)\n",
+    "print(rfcl.score(x_train,y_train))\n",
+    "print(rfcl.score(x_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7845849802371542\n",
+      "0.7339449541284404\n"
+     ]
+    }
+   ],
+   "source": [
+    "rfcl=RandomForestClassifier(n_estimators=64,random_state=1,criterion='entropy', max_depth=2)\n",
+    "rfcl.fit(x_train,y_train)\n",
+    "print(rfcl.score(x_train,y_train))\n",
+    "print(rfcl.score(x_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7845849802371542\n",
+      "0.7339449541284404\n"
+     ]
+    }
+   ],
+   "source": [
+    "rfcl=RandomForestClassifier(n_estimators=64,random_state=1,criterion='gini', max_depth=2)\n",
+    "rfcl.fit(x_train,y_train)\n",
+    "print(rfcl.score(x_train,y_train))\n",
+    "print(rfcl.score(x_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.83399209486166\n",
+      "0.7247706422018348\n"
+     ]
+    }
+   ],
+   "source": [
+    "rfcl=RandomForestClassifier(n_estimators=64,random_state=1,criterion='gini', max_depth=3)\n",
+    "rfcl.fit(x_train,y_train)\n",
+    "print(rfcl.score(x_train,y_train))\n",
+    "print(rfcl.score(x_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7905138339920948\n",
+      "0.7247706422018348\n"
+     ]
+    }
+   ],
+   "source": [
+    "rfcl=RandomForestClassifier(n_estimators=64,random_state=1,criterion='gini',max_features=3, max_depth=2)\n",
+    "rfcl.fit(x_train,y_train)\n",
+    "print(rfcl.score(x_train,y_train))\n",
+    "print(rfcl.score(x_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8162055335968379\n",
+      "0.7201834862385321\n"
+     ]
+    }
+   ],
+   "source": [
+    "rfcl=RandomForestClassifier(n_estimators=100,random_state=1,criterion='entropy',max_features=4, max_depth=3)\n",
+    "rfcl.fit(x_train,y_train)\n",
+    "print(rfcl.score(x_train,y_train))\n",
+    "print(rfcl.score(x_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8320158102766798\n",
+      "0.7339449541284404\n"
+     ]
+    }
+   ],
+   "source": [
+    "rfcl=RandomForestClassifier(n_estimators=100,random_state=1,criterion='entropy',max_features=2, max_depth=3)\n",
+    "rfcl.fit(x_train,y_train)\n",
+    "print(rfcl.score(x_train,y_train))\n",
+    "print(rfcl.score(x_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7964426877470355\n",
+      "0.7247706422018348\n"
+     ]
+    }
+   ],
+   "source": [
+    "rfcl=RandomForestClassifier(n_estimators=100,random_state=1,criterion='entropy',max_features=6, max_depth=3)\n",
+    "rfcl.fit(x_train,y_train)\n",
+    "print(rfcl.score(x_train,y_train))\n",
+    "print(rfcl.score(x_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import AdaBoostClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8636363636363636\n",
+      "0.7110091743119266\n"
+     ]
+    }
+   ],
+   "source": [
+    "adcl=AdaBoostClassifier(n_estimators=64,random_state=1)\n",
+    "adcl.fit(x_train,y_train)\n",
+    "print(adcl.score(x_train,y_train))\n",
+    "print(adcl.score(x_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8557312252964426\n",
+      "0.7155963302752294\n"
+     ]
+    }
+   ],
+   "source": [
+    "adcl=AdaBoostClassifier(n_estimators=50,random_state=1)\n",
+    "adcl.fit(x_train,y_train)\n",
+    "print(adcl.score(x_train,y_train))\n",
+    "print(adcl.score(x_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9031620553359684\n",
+      "0.7339449541284404\n"
+     ]
+    }
+   ],
+   "source": [
+    "gdcl=GradientBoostingClassifier(n_estimators=50,random_state=1)\n",
+    "gdcl.fit(x_train,y_train)\n",
+    "print(gdcl.score(x_train,y_train))\n",
+    "print(gdcl.score(x_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9426877470355731\n",
+      "0.7385321100917431\n"
+     ]
+    }
+   ],
+   "source": [
+    "gdcl=GradientBoostingClassifier(n_estimators=100\n",
+    "                    ,random_state=1)\n",
+    "gdcl.fit(x_train,y_train)\n",
+    "print(gdcl.score(x_train,y_train))\n",
+    "print(gdcl.score(x_test,y_test))"
    ]
   },
   {
