--- a/Pytorch/chapter1.ipynb
+++ b/Pytorch/chapter1.ipynb
@@ -6,7 +6,7 @@
       "name": "chapter1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPhqSbwVUCX5E1rxwLd68Mu",
+      "authorship_tag": "ABX9TyN21AutvC0+InMJ1S7z4bwB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -318,7 +318,600 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QzkLeEgBH2M3"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QzkLeEgBH2M3",
+        "outputId": "abf9df16-d36c-45be-e230-c0e11ad5446b"
+      },
+      "source": [
+        "#Initialize 2-D tensor\n",
+        "a=torch.zeros(4,5)\n",
+        "a"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0., 0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gdn2j3a_IaaA",
+        "outputId": "9ee3bdde-fd84-4fcd-8df4-e0e6b2296b7b"
+      },
+      "source": [
+        "#Access point in 2D\n",
+        "point[1,1]"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(6)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xhK5uV48Iik2",
+        "outputId": "bb65387a-f707-49fe-9f24-93b8b58ea25b"
+      },
+      "source": [
+        "point[1:]"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[3, 6],\n",
+              "        [1, 2]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cOsWW0tZIm6s",
+        "outputId": "1d12d778-7ef9-4acb-ce6d-8021502cf094"
+      },
+      "source": [
+        "#Indexing Range in tensors\n",
+        "point[1:]"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[3, 6],\n",
+              "        [1, 2]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Csyhez0NI96Q",
+        "outputId": "056d20e1-c1f2-4232-fb40-6839ca78d2fb"
+      },
+      "source": [
+        "point[:2]"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[4, 2],\n",
+              "        [3, 6]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oxsxxhGxI_NJ",
+        "outputId": "b775699d-2978-493e-d076-1cf2ac21b8e2"
+      },
+      "source": [
+        "point[:,-1]     #All row from last column"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([2, 6, 2])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4-IkDjkpJBmp",
+        "outputId": "377a93f0-0e21-4572-be7e-eb1aa9597701"
+      },
+      "source": [
+        "point[:-1]      #From start till first end"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[4, 2],\n",
+              "        [3, 6]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qs80SgadJRW-"
+      },
+      "source": [
+        "#Named tensor"
+      ],
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Hztav_ZHKMl3"
+      },
+      "source": [
+        "img_t=torch.randn(3,5,5)   # 3D tensor of size 3*5*5"
+      ],
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_HuEt4mgKY9P"
+      },
+      "source": [
+        "weights = torch.tensor([0.2126, 0.7152, 0.0722])"
+      ],
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xFdYxP2nKkIR"
+      },
+      "source": [
+        "batch_t = torch.randn(2, 3, 5, 5) # shape [batch, channels, rows, columns]"
+      ],
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jTwYs8Q1KreJ"
+      },
+      "source": [
+        "#here we are assuming that RGB channel will be third dimension from the end"
+      ],
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CoFzklXKK34y",
+        "outputId": "545cb131-66ef-4772-af00-ee91fea652cf"
+      },
+      "source": [
+        "img_gray_naive = img_t.mean(-3)\n",
+        "batch_gray_naive = batch_t.mean(-3)\n",
+        "img_gray_naive.shape, batch_gray_naive.shape"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Size([5, 5]), torch.Size([2, 5, 5]))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bhKRuqdnK8lN"
+      },
+      "source": [
+        "# #PyTorch will allow us to multiply things that are the\n",
+        "# same shape, as well as shapes where one operand is of size 1 in a given dimension. It\n",
+        "# also appends leading dimensions of size 1 automatically. This is a feature called broadcasting.\n",
+        "# batch_t of shape (2, 3, 5, 5) is multiplied by unsqueezed_weights of shape (3,\n",
+        "# 1, 1), resulting in a tensor of shape (2, 3, 5, 5), from which we can then sum the third\n",
+        "# dimension from the end (the three channels):\n"
+      ],
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sJBw12pTLIhf"
+      },
+      "source": [
+        "unsqueezed_weights = weights.unsqueeze(-1).unsqueeze_(-1)  #Changing the shape of tensor"
+      ],
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5jjSnp_9LqBd",
+        "outputId": "eaa7b2d6-d7f7-451d-c4dc-23ba7a7b8a13"
+      },
+      "source": [
+        "unsqueezed_weights"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[0.2126]],\n",
+              "\n",
+              "        [[0.7152]],\n",
+              "\n",
+              "        [[0.0722]]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QIpin8wxLsdl"
+      },
+      "source": [
+        "img_weights = (img_t * unsqueezed_weights)\n",
+        "batch_weights = (batch_t * unsqueezed_weights)"
+      ],
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gxhFn1YeL0h8",
+        "outputId": "efcc91bc-1a4b-44d9-fa02-0b9dceafd806"
+      },
+      "source": [
+        "img_gray_weighted = img_weights.sum(-3)                   #Mean of color channel\n",
+        "batch_gray_weighted = batch_weights.sum(-3)\n",
+        "batch_weights.shape, batch_t.shape, unsqueezed_weights.shape"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Size([2, 3, 5, 5]), torch.Size([2, 3, 5, 5]), torch.Size([3, 1, 1]))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "R-JblgnbL4O_"
+      },
+      "source": [
+        "#Tensor factory functions such as tensor and rand\n",
+        "# take a names argument. The names should be a sequence of strings:"
+      ],
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BuQrHe6cMXjC",
+        "outputId": "0834ec88-4b19-42df-83e5-fe7706287961"
+      },
+      "source": [
+        "weights_named = torch.tensor([0.2126, 0.7152, 0.0722], names=['channels'])\n",
+        "weights_named"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:1: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at  /pytorch/c10/core/TensorImpl.h:934.)\n",
+            "  \"\"\"Entry point for launching an IPython kernel.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0.2126, 0.7152, 0.0722], names=('channels',))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_rfo532PMbd7"
+      },
+      "source": [
+        "# Similar to indexing, the ellipsis (…)\n",
+        "# allows you to leave out any number of dimensions."
+      ],
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2oTbcRnpMytw",
+        "outputId": "0745b5f1-0d74-4261-bc64-ef18d7430a46"
+      },
+      "source": [
+        "img_named = img_t.refine_names(..., 'channels', 'rows', 'columns')\n",
+        "batch_named = batch_t.refine_names(..., 'channels', 'rows', 'columns')\n",
+        "print(\"img named:\", img_named.shape, img_named.names)\n",
+        "print(\"batch named:\", batch_named.shape, batch_named.names)"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "img named: torch.Size([3, 5, 5]) ('channels', 'rows', 'columns')\n",
+            "batch named: torch.Size([2, 3, 5, 5]) (None, 'channels', 'rows', 'columns')\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WSAc8AdxM4iX"
+      },
+      "source": [
+        "# The method align_as returns a tensor with missing dimensions\n",
+        "# added and existing ones permuted to the right order:"
+      ],
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hClDTT_TNNvS",
+        "outputId": "06803eae-1a5b-4be5-e241-6031304efdbe"
+      },
+      "source": [
+        "weights_aligned = weights_named.align_as(img_named)     #Align name of weights_named as img_named\n",
+        "weights_aligned.shape, weights_aligned.names"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Size([3, 1, 1]), ('channels', 'rows', 'columns'))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-j_wa-pHNSBw",
+        "outputId": "4ff80fee-1cea-478b-ee37-217c52b89e14"
+      },
+      "source": [
+        "gray_named = (img_named * weights_aligned).sum('channels')\n",
+        "gray_named.shape, gray_named.names"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Size([5, 5]), ('rows', 'columns'))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JrR2jHE7NeE0"
+      },
+      "source": [
+        "# If we want to use tensors outside functions that operate on named tensors, we need to\n",
+        "# drop the names by renaming them to None. The following gets us back into the world\n",
+        "# of unnamed dimensions:"
+      ],
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UYxyg4fgOSCs",
+        "outputId": "595c0913-ce06-415c-85b4-2fa23a952bc4"
+      },
+      "source": [
+        "gray_plain = gray_named.rename(None)\n",
+        "gray_plain.shape, gray_plain.names"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Size([5, 5]), (None, None))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b6vqqVtrOT2B"
       },
       "source": [
         ""
